# bundi-chat

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  ws_manager.py
app/: __init__.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  token_bearer.py  ws_manager.py
app/middleware/: auth.py
app/models/: __init__.py  base.py  blacklisted_tokens.py  chat.py  room.py  room_members.py  user.py
app/routers/: auth.py  chats.py  rooms.py
app/schemas/: __init__.py  auth_schema.py  room_schema.py  user_schema.py
app/services/: __init__.py  auth_service.py  chat_service.py  room_service.py
app/utils/: auth.py  room.py
migrations/models/: 1_20251113185354_None.py  2_20251113222957_update.py  3_20251113223043_update.py  4_20251113223449_update.py
